sumo/tests/dfrouter/errors/false_output_directory/errors.dfrouter
Error: Can not write emitter definitions to file 'invalid/emitters.add.xml'.
Quitting (on error).
